--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "SET DEBUG=express-locallibrary-tutorial & npm run devstart"
+    "serverstart": "SET DEBUG=lib & npm run devstart"
   },
   "dependencies": {
     "async": "^3.2.4",
@@ -13,6 +13,7 @@
     "debug": "~4.3.4",
     "express": "~4.18.1",
     "http-errors": "~2.0.0",
+    "luxon": "^3.0.1",
     "mongoose": "^6.5.2",
     "morgan": "~1.10.0",
     "pug": "3.0.2"
