--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.6",
     "debug": "~4.3.4",
     "express": "~4.18.1",
+    "express-validator": "^6.14.2",
     "http-errors": "~2.0.0",
     "luxon": "^3.0.1",
     "mongoose": "^6.5.2",
