--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "lib",
   "version": "0.0.0",
+  "engines": {
+    "node": "16.14.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "SET DEBUG=lib & npm run devstart"
+    "serverstart": "SET DEBUG=author & npm run devstart"
   },
   "dependencies": {
     "async": "^3.2.4",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.6",
     "debug": "~4.3.4",
     "express": "~4.18.1",
     "express-validator": "^6.14.2",
+    "helmet": "^5.1.1",
     "http-errors": "~2.0.0",
     "luxon": "^3.0.1",
     "mongoose": "^6.5.2",
